<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.akshatsharma.medifinder.Disclaimer"
    style="@style/applyColor">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Disclaimer"
            android:id="@+id/textView2"
            android:textSize="75dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#73D6EF" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_below="@+id/textView2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medical Disclaimer"
                    android:id="@+id/textView3"
                    android:textSize="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textColor="#73D6EF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medDisclaimer"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/textView3"
                    android:textSize="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="User Contents"
                    android:id="@+id/textView5"
                    android:textSize="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@+id/textView4"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:textColor="#73D6EF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userContents"
                    android:id="@+id/textView6"
                    android:layout_below="@+id/textView5"
                    android:layout_marginTop="5dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="User Information"
                    android:id="@+id/textView7"
                    android:textSize="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_below="@+id/textView6"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textColor="#73D6EF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userInformation"
                    android:id="@+id/textView8"
                    android:layout_below="@+id/textView7"
                    android:layout_marginTop="5dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Liability"
                    android:id="@+id/textView9"
                    android:textSize="35dp"
                    android:layout_below="@+id/textView8"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textColor="#73D6EF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liability"
                    android:id="@+id/textView10"
                    android:layout_below="@+id/textView9"
                    android:layout_marginTop="5dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Usage"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView11"
                    android:textSize="35dp"
                    android:layout_below="@+id/textView10"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textColor="#73D6EF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usage"
                    android:id="@+id/textView12"
                    android:layout_below="@+id/textView11"
                    android:layout_margin="5dp" />
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</FrameLayout>
